# ssp_voicevox_plugin

./: Cargo.toml  README.md
src/: lib.rs
src/audio_pool/: mod.rs
src/entrypoint/: mod.rs
src/sstp_parser/: mod.rs
src/sstp_request/: mod.rs
src/sstp_response/: mod.rs
